--- a/manifests/kustomize/deployment.yaml
+++ b/manifests/kustomize/deployment.yaml
@@ -32,6 +32,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: CONFIG_MAP_NAME
+          value: pod-refresh-controller
         resources:
           requests:
             cpu: 100m
